<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context="ram.android.myhabittracker.MainActivity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:hint="@string/habit"
        android:inputType="textMultiLine" />

    <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:textSize="40sp"
            android:hint="@string/duration"
            android:inputType="number"
        android:textColor="@color/colorPrimary" />

    <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/button"
        android:textColor="?attr/editTextColor"
        android:background="@android:color/holo_blue_dark" />
    <EditText
        android:id="@+id/edit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:hint="@string/data"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/req_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/button1"
        android:textColor="?attr/editTextColor"
        android:background="@android:color/holo_blue_dark" />
    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="40sp"
        android:textColor="#4689C8"
        android:textStyle="bold"
        />
</LinearLayout>
